<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="188dp"
        android:text="@string/number_of_people"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/num_attend_edit_text"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:backgroundTintMode="add"
            android:foregroundTint="@color/white"
            android:hint="@string/type_here"
            android:visibility="visible" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/how_hungry"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="347dp"
        android:layout_height="49dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/lightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/mediumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/ravenousButton"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/revenous"
            android:textSize="16sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="139dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/total_pizzas"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hungry_radio_group" />

    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:layout_width="72dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/hint_text"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/hungry_radio_group" />

    <Button
        android:id="@+id/calc_button"
        android:layout_width="375dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:text="@string/calculate"
        android:onClick="calculateClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        style = "@style/CalcButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>